--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="bio">
         <h1>about</h1>
         <p>
-            Hi, I'm Rena Liang! I'm a girl from Austin, Texas that's continuing her journey as a computer science major at Cornell Univeristy. 
+            Hi, I'm Rena Liang! I'm a girl from Austin, Texas that's continuing her journey as a computer science major at Cornell University. 
             I'm passionate about dance, robotics, community outreach, and using technology to create better solutions for the world.
         </p>
         <p>
